more alignment fixed for admin

--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -382,7 +382,7 @@
         cursor: pointer;
         font-size: 0.85em;
         @media screen and (max-width: 1400px) {
-            right: -31px;
+            right: -20px;
         }
     }
 }
